# cpp-project-template

./: CMakeLists.txt  README.md
lib/FirstLibrary/: CMakeLists.txt
lib/FirstLibrary/docs/: README.md
lib/FirstLibrary/examples/: example-firstlibrary.cpp
lib/FirstLibrary/src/: FirstLibrary.cpp  FirstLibrary.h
lib/SecondLibrary/: CMakeLists.txt
lib/SecondLibrary/src/: SecondLibrary.cpp  SecondLibrary.h
lib/ThirdLibrary/: CMakeLists.txt
lib/ThirdLibrary/src/: ThirdLibrary.cpp  ThirdLibrary.h
src/: main.cpp
